--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -8,5 +8,5 @@ jobs:
     uses: ./.github/workflows/reusable.yml
     with:
       names: "Dorel,Costel,Gigi"
-      greeting: "Hello,Salut,Bonjour"
-      punctuation: "!,!!,!!!"
+      greeting: "Hello,"
+      punctuation: "!"
